👌 IMPROVE: update swagger
