# time-tracker-api/docs/swagger.json
@@ -276,6 +276,17 @@
                 "tags": [
                     "users"
                 ],
+                "parameters": [
+                    {
+                        "description": "worklog",
+                        "name": "worklog",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/users.Worklog"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": ""
@@ -368,6 +379,23 @@
                     "type": "string"
                 },
                 "user_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "users.Worklog": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "hours": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "project_id": {
                     "type": "string"
                 }
             }
